Errors
gil@gil-VirtualBox:~/Desktop/compilation course/compiler 2025/part2$ yacc -d -v parser.y
parser.y: warning: 3 shift/reduce conflicts [-Wconflicts-sr]
parser.y: note: rerun with option '-Wcounterexamples' to generate conflict counterexamples
gil@gil-VirtualBox:~/Desktop/compilation course/compiler 2025/part2$ lex scanner.l
gil@gil-VirtualBox:~/Desktop/compilation course/compiler 2025/part2$ gcc -o parser y.tab.c lex.yy.c semantic.c symbol_table.c -I. -lfl
parser.y: In function ‘yyparse’:
parser.y:587:59: error: ‘body’ undeclared (first use in this function)
  587 |                         $$ = mknode("DO_WHILE", body, mknode($4, NULL, NULL));
      |                                                           ^~~~
parser.y:587:59: note: each undeclared identifier is reported only once for each function it appears in
parser.y:587:82: warning: passing argument 1 of ‘mknode’ from incompatible pointer type [-Wincompatible-pointer-types]
  587 |                         $$ = mknode("DO_WHILE", body, mknode($4, NULL, NULL));
      |                                                                        ~~~~~~~   ^     
      |                                                                                  |
      |                                                                                  struct node *
parser.y:21:20: note: expected ‘char *’ but argument is of type ‘struct node *’
   21 | node* mknode(char *token, node *left, node *right);
      |              ~~~~~~^~~~~
